--- a/.classpath
+++ b/.classpath
@@ -2,31 +2,30 @@
 <classpath>
 	<classpathentry kind="src" path="WEB-INF/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/catalina-storeconfig.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/commons-dbcp.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/commons-pool.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-jni.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-util-scan.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/tomcat-websocket.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat8/lib/websocket-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/java/mysql.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-storeconfig.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/ecj-4.5.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-jni.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-util-scan.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-websocket.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/websocket-api.jar"/>
+	<classpathentry kind="lib" path="/Users/prachinawathe/Downloads/mysql-connector-java-5.1.21.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
