--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
     version="2.4">
-
+    
     <display-name>USCalendar</display-name>
 
     <servlet>
@@ -16,6 +16,11 @@
         <servlet-class>main.Test</servlet-class>
     </servlet>
 
+    <!-- <servlet>
+        <servlet-name>ChatServlet</servlet-name>
+        <servlet-class>main.Chat</servlet-class>
+    </servlet> -->
+
     <servlet-mapping>
         <servlet-name>HelloServlet</servlet-name>
         <url-pattern>/hello</url-pattern>
@@ -25,5 +30,13 @@
         <servlet-name>TestServlet</servlet-name>
         <url-pattern>/test</url-pattern>
     </servlet-mapping>
+
+    <!-- <servlet-mapping>
+        <servlet-name>ChatServlet</servlet-name>
+        <url-pattern>/chat</url-pattern>
+    </servlet-mapping> -->
+    <listener>
+        <listener-class>main.Chat</listener-class>
+    </listener>
 
 </web-app>
