--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -7,18 +7,23 @@
     <display-name>USCalendar</display-name>
 
     <servlet>
-        <servlet-name>LoginServlet</servlet-name>
+        <servlet-name>UserLoginServlet</servlet-name>
         <servlet-class>user.Login</servlet-class>
     </servlet>
     
     <servlet>
-        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-name>UserLogoutServlet</servlet-name>
         <servlet-class>user.Logout</servlet-class>
     </servlet>
     
     <servlet>
-        <servlet-name>CreateServlet</servlet-name>
+        <servlet-name>UserCreateServlet</servlet-name>
         <servlet-class>user.Create</servlet-class>
+    </servlet>
+    
+    <servlet>
+        <servlet-name>EventServlet</servlet-name>
+        <servlet-class>calendar.EventServlet</servlet-class>
     </servlet>
 
     <servlet>
@@ -27,18 +32,23 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <url-pattern>/user/login</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
-        <servlet-name>LogoutServlet</servlet-name>
-        <url-pattern>/logout</url-pattern>
+        <servlet-name>UserLogoutServlet</servlet-name>
+        <url-pattern>/user/logout</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
-        <servlet-name>CreateServlet</servlet-name>
-        <url-pattern>/create_user</url-pattern>
+        <servlet-name>UserCreateServlet</servlet-name>
+        <url-pattern>/user/create</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>EventServlet</servlet-name>
+        <url-pattern>/event</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
