--- a/.classpath
+++ b/.classpath
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="WEB-INF/src"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/commons-dbcp.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/commons-pool.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/mysql.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="/usr/share/tomcat7/lib/tomcat-util.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-openjdk-amd64"/>
-	<classpathentry kind="lib" path="/var/lib/tomcat7/webapps/ROOT/lib/gson.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/var/lib/tomcat7/webapps/ROOT/lib/gson-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/gson-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/gson.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/mysql.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/annotations-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-ant.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-ha.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-storeconfig.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina-tribes.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/catalina.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/ecj-4.5.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/el-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/jasper-el.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/jasper.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-coyote.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-i18n-es.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-i18n-fr.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-i18n-ja.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-jdbc.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-jni.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-util-scan.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-util.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/tomcat-websocket.jar"/>
+	<classpathentry kind="lib" path="/Applications/tomcat/lib/websocket-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
