--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -40,6 +40,11 @@
         <servlet-name>FriendsServlet</servlet-name>
         <servlet-class>user.FriendsServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+        <servlet-name>NotificationServlet</servlet-name>
+        <servlet-class>calendar.NotificationServlet</servlet-class>
+    </servlet>
 
 
 
@@ -76,5 +81,10 @@
     <servlet-mapping>
         <servlet-name>FriendsServlet</servlet-name>
         <url-pattern>/friends</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>NotificationServlet</servlet-name>
+        <url-pattern>/notifications</url-pattern>
     </servlet-mapping>
 </web-app>
