enrolling in classes

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -45,8 +45,11 @@
         <servlet-name>NotificationServlet</servlet-name>
         <servlet-class>calendar.NotificationServlet</servlet-class>
     </servlet>
-
-
+    
+    <servlet>
+        <servlet-name>ClassEnrollServlet</servlet-name>
+        <servlet-class>usc_classes.ClassEnrollServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>UserLoginServlet</servlet-name>
@@ -86,5 +89,10 @@
     <servlet-mapping>
         <servlet-name>NotificationServlet</servlet-name>
         <url-pattern>/notifications</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>ClassEnrollServlet</servlet-name>
+        <url-pattern>/classes</url-pattern>
     </servlet-mapping>
 </web-app>
