Working on guest mode

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -60,6 +60,11 @@
         <servlet-name>StudyRecommendationServlet</servlet-name>
         <servlet-class>calendar.StudyRecommendationServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+        <servlet-name>ICSUploadServlet</servlet-name>
+        <servlet-class>calendar.ICSServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>UserLoginServlet</servlet-name>
@@ -114,5 +119,10 @@
     <servlet-mapping>
         <servlet-name>StudyRecommendationServlet</servlet-name>
         <url-pattern>/recommendations</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>ICSUploadServlet</servlet-name>
+        <url-pattern>/icsUpload</url-pattern>
     </servlet-mapping>
 </web-app>
