--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^2.3.2"
+  },
+  "dependencies": {
+    "es6-promise": "~4.0.5"
   }
 }
